--- a/site/index.html
+++ b/site/index.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="../dist/css/gambs.css" />
   </head>
   <body>
-    <div class="d-flex jc-between">
-      <button class="">BOTÃO</button>
-      <button class="btn btn-gray btn-light">BOTÃO</button>
-      <button class="btn btn-green btn-light">BOTÃO</button>
-      <button class="btn btn-red btn-light">BOTÃO</button>
-      <button class="btn btn-secondary btn-light">BOTÃO</button>
-      <button class="btn btn-secondary btn-light">BOTÃO</button>
+    <div class="d-flex jc-between f-wrap">
+      <button style="width: 30vw" class="">BOTÃO</button>
+      <button style="width: 30vw" class="btn bg-blue100 btn-light">BOTÃO</button>
+      <button style="width: 30vw" class="btn bg-gray100 btn-light">BOTÃO</button>
+      <button style="width: 30vw" class="btn bg-red400 btn-light">BOTÃO</button>
+      <button style="width: 30vw" class="btn bg-purple600 btn-light">
+        BOTÃO
+      </button>
+      <button style="width: 30vw" class="btn bg-gray500 btn-light">
+        BOTÃO
+      </button>
       <a href="" class="btn btn-primary btn-light">LINK</a>
     </div>
   </body>
